--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "purescript-prelude": "^2.4.0",
     "purescript-console": "^2.0.0",
     "purescript-canvas": "^2.0.0",
-    "purescript-math": "^2.0.0"
+    "purescript-math": "^2.0.0",
+    "purescript-refs": "^2.0.0",
+    "purescript-js-timers": "^2.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
