Add progress bar.

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "purescript-canvas": "^2.0.0",
     "purescript-math": "^2.0.0",
     "purescript-refs": "^2.0.0",
-    "purescript-js-timers": "^2.0.0"
+    "purescript-js-timers": "^2.0.0",
+    "purescript-foldable-traversable": "^2.2.0",
+    "purescript-arrays": "^3.2.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
